tdf#157038 sc: avoid spell-check dialog from outside selection

Fixes 7.4 regression from cf18038c66075f7a18d89e47f3a2ab1a5bf7c4fd

To avoid the HIGHLY LIKELY risk of losing the selection
because of the LOW POTENTIAL of the right click
being over a misspelling (that overflowed from outside the selection),
simply don't even attempt to spell-check in that case.

The opposite was already true (and is even worse).
If the misspelling originates in the selected cells,
but has overflowed into an unselected area,
right clicking on the misspelling is deliberately ignored
by SelectForContextMenu().

Change-Id: I7dfc5b190036f1705d848cb621e527cbff37e425
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157430
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 4cf4516bac88fb8f58743e6ae68eab0393059d7f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157328
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>
(cherry picked from commit d23b589a9c4fd38e714e23ff91e623a33909a739)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157469